# GeorgeAcademy

./: .env  .gitignore  .vercelignore  Procfile  README.md  build.sh  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel-static-server.js  vercel.json
.vercel/: .env.preview.local  project.json
Python-3.12.0/: Makefile  Makefile.pre  config.status  pyconfig.h  python-config
Python-3.12.0/Misc/: python-config.sh  python.pc
Python-3.12.0/Modules/: Setup.stdlib  _abc.gcda  _asynciomodule.gcda  _bisectmodule.gcda  _bz2module.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _contextvarsmodule.gcda  _cryptmodule.gcda  _csv.gcda  _curses_panel.gcda  _cursesmodule.gcda  _datetimemodule.gcda  _dbmmodule.gcda  _elementtree.gcda  _functoolsmodule.gcda  _gdbmmodule.gcda  _hashopenssl.gcda  _heapqmodule.gcda  _json.gcda  _localemodule.gcda  _lsprof.gcda  _lzmamodule.gcda  _opcode.gcda  _operator.gcda  _pickle.gcda  _posixsubprocess.gcda  _queuemodule.gcda  _randommodule.gcda  _ssl.gcda  _stat.gcda  _statisticsmodule.gcda  (+59 more)
blog/: models.py  tests.py
cart/: models.py  tests.py
courses/: models.py  tests.py
george_academy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
my_project/: settings.py  urls.py  wsgi.py
products/: admin.py  models.py  tests.py  views.py
staticfiles/: .verified  manifest.txt
templates/: about.html  blog-single.html  cart.html  checkout.html  contact.html  course-grid.html  index-7.html  login-registration.html  login_registration.html  product-list-filter.html
users/: forms.py  views.py
(+213 files in other folders)
