[build-system]
requires = [
    "setuptools>=65.5.1",  # Stable version of setuptools
    "wheel>=0.40.0"        # Stable version of wheel
]
build-backend = "setuptools.build_meta"

[project]
name = "george-academy"  # Replace with your project name
version = "0.1.0"           # Replace with your project version
description = "School website for STEM students"  # Replace with a short description
authors = [
    { name = "George Rubinga", email = "georgerubinga@gmail.com" }  # Replace with your details
]
license = "LGPL-3.0-or-later"
readme = "README.md"  # Ensure you have a README.md file
requires-python = ">=3.11"  # Specify the minimum Python version

[project.urls]
homepage = "https://george-academy.vercel.app/"  # Replace with your project's homepage
repository = "https://george-academy.vercel.app/"  # Replace with your GitHub repo

[tool.setuptools]
packages = ["cart", "blog", "users", "courses", "products", "my_project"]